--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   get: ^4.6.5
   google_fonts: ^3.0.1
   convex_bottom_bar: ^3.0.0
+  provider: ^6.0.3
+  intl: ^0.17.0
+  sensors_plus: ^1.4.0
+  audioplayers: ^1.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -63,22 +67,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/icons8-lifebuoy-96 1.png
-    - assets/images/icons8-security-user-female-48 1.png
-    - assets/images/icons8-key-2-48 1.png
-    - assets/images/icons8-medical-doctor-48 1 (2).png
-    - assets/images/icons8-doctors-folder-48 1.png
-    - assets/images/icons8-heart-with-pulse-48 1.png
-    - assets/images/icons8-lifebuoy-48 1.png
-    - assets/images/icons8-add-phone-48 1.png
-    - assets/images/icons8-google-home-48 1.png
-    - assets/images/icons8-important-book-48 1.png
-    - assets/images/icons8-hospital-48 1.png
-    - assets/images/icons8-inquiry-48 1.png
-    - assets/images/icons8-left-96 1.png
-    - assets/images/icons8-heart-96 1.png
-    - assets/images/Group 1.png
-    - assets/images/cpr.gif
+    - assets/sounds/
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
